--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:1234/postgres
+spring.datasource.username=postgres
+spring.datasource.password=test-auth
